refactored dealing with roles, removed registerUser to AuthService