@@ -1,16 +1,28 @@
 package com.ifortex.internship.auth_service.service.impl;
 
 import com.ifortex.internship.auth_service.dto.request.LoginRequest;
-import com.ifortex.internship.auth_service.dto.response.CookieTokensResponse;
+import com.ifortex.internship.auth_service.dto.request.RegistrationRequest;
 import com.ifortex.internship.auth_service.dto.response.AuthResponse;
+import com.ifortex.internship.auth_service.dto.response.CookieTokensResponse;
+import com.ifortex.internship.auth_service.dto.response.RegistrationResponse;
+import com.ifortex.internship.auth_service.exception.custom.EmailAlreadyRegistered;
+import com.ifortex.internship.auth_service.exception.custom.PasswordMismatchException;
+import com.ifortex.internship.auth_service.exception.custom.RoleNotFoundException;
 import com.ifortex.internship.auth_service.exception.custom.UserNotAuthenticatedException;
+import com.ifortex.internship.auth_service.model.ERole;
 import com.ifortex.internship.auth_service.model.RefreshToken;
 import com.ifortex.internship.auth_service.model.Role;
+import com.ifortex.internship.auth_service.model.User;
 import com.ifortex.internship.auth_service.model.UserDetailsImpl;
-import com.ifortex.internship.auth_service.service.CookieService;
+import com.ifortex.internship.auth_service.repository.RoleRepository;
+import com.ifortex.internship.auth_service.repository.UserRepository;
 import com.ifortex.internship.auth_service.service.AuthService;
+import com.ifortex.internship.auth_service.service.CookieService;
 import com.ifortex.internship.auth_service.service.RefreshTokenService;
 import com.ifortex.internship.auth_service.service.TokenService;
+import java.time.LocalDateTime;
+import java.util.List;
+import java.util.stream.Collectors;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.http.ResponseCookie;
 import org.springframework.security.authentication.AuthenticationManager;
@@ -18,27 +30,80 @@ import org.springframework.security.authentication.UsernamePasswordAuthenticatio
 import org.springframework.security.core.Authentication;
 import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.context.SecurityContextHolder;
+import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.stereotype.Service;
-
-import java.util.List;
+import org.springframework.transaction.annotation.Transactional;
 
 @Slf4j
 @Service
 public class AuthServiceImpl implements AuthService {
+
+  private final UserRepository userRepository;
   private final TokenService tokenService;
   private final AuthenticationManager authenticationManager;
   private final CookieService cookieService;
   private final RefreshTokenService refreshTokenService;
+  private final PasswordEncoder passwordEncoder;
+  private final RoleRepository roleRepository;
 
   public AuthServiceImpl(
+      UserRepository userRepository,
       TokenService tokenService,
       AuthenticationManager authenticationManager,
       CookieService cookieService,
-      RefreshTokenService refreshTokenService) {
+      RefreshTokenService refreshTokenService,
+      PasswordEncoder passwordEncoder,
+      RoleRepository roleRepository) {
+    this.userRepository = userRepository;
     this.tokenService = tokenService;
     this.authenticationManager = authenticationManager;
     this.cookieService = cookieService;
     this.refreshTokenService = refreshTokenService;
+    this.passwordEncoder = passwordEncoder;
+    this.roleRepository = roleRepository;
+  }
+
+  @Transactional
+  public RegistrationResponse register(RegistrationRequest request) {
+
+    log.debug("Register user: {}", request.getEmail());
+    if (userRepository.findByEmail(request.getEmail()).isPresent()) {
+      log.error("Email: {} is already registered.", request.getEmail());
+      throw new EmailAlreadyRegistered("Email: " + request.getEmail() + " is already registered.");
+    }
+
+    boolean passwordMismatch = !request.getPassword().equals(request.getPasswordConfirmation());
+    if (passwordMismatch) {
+      log.error("Password and confirmation password do not match.");
+      throw new PasswordMismatchException("Password and confirmation password do not match.");
+    }
+
+    String hashedPassword = passwordEncoder.encode(request.getPassword());
+
+    // how should I handle this exception?
+    // it can occurs only if there is no such role in the db
+    // but it responsibility of developer to create such fields in the db
+    // user do not send role during registration
+    Role nonSubscribedUser =
+        roleRepository
+            .findByName(ERole.NON_SUBSCRIBED_USER)
+            .orElseThrow(
+                () -> {
+                  log.error("Role: {} is not found", ERole.NON_SUBSCRIBED_USER);
+                  return new RoleNotFoundException("Role NON_SUBSCRIBED_USER is not found");
+                });
+
+    User user = new User();
+    user.setEmail(request.getEmail());
+    user.setPassword(hashedPassword);
+    user.setRoles(List.of(nonSubscribedUser));
+    user.setCreatedAt(LocalDateTime.now());
+    user.setUpdatedAt(LocalDateTime.now());
+    userRepository.save(user);
+    log.debug("User: {} saved to db successfully", request.getEmail());
+
+    log.info("User: {} register successfully", request.getEmail());
+    return new RegistrationResponse("Registration successful.", user.getId());
   }
 
   public AuthResponse authenticateUser(LoginRequest loginRequest) {
@@ -53,22 +118,16 @@ public class AuthServiceImpl implements AuthService {
 
     UserDetailsImpl userDetails = (UserDetailsImpl) authentication.getPrincipal();
 
-    // get List of roles to generateAccessToken
-    // authorities in the UserDetailsImpl stores like "ROLE_NAME_OF_ROLE"
-    // use substring to get only NAME_OF_ROLE that corresponds with Role enum
-    List<Role> roles =
+    List<String> roles =
         userDetails.getAuthorities().stream()
             .map(GrantedAuthority::getAuthority)
-            .map(role -> role.substring(5))
-            .map(Role::valueOf)
-            .toList();
+            .collect(Collectors.toList());
 
     log.debug("User: {} successfully authenticated.", userDetails.getUsername());
 
     // feature add email verification
 
-    String newAccessToken =
-        tokenService.generateAccessToken(userDetails.getUsername(), roles);
+    String newAccessToken = tokenService.generateAccessToken(userDetails.getUsername(), roles);
     log.debug("Access token generated successfully for user: {}", userDetails.getEmail());
 
     RefreshToken newRefreshToken = tokenService.createRefreshToken(userDetails.getId());
@@ -88,10 +147,9 @@ public class AuthServiceImpl implements AuthService {
   public AuthResponse logoutUser() {
     Object principle = SecurityContextHolder.getContext().getAuthentication().getPrincipal();
     Long userId;
-    if (!principle.toString().equals("anonymousUser")) {
+    if (!"anonymousUser".equals(principle.toString())) {
       userId = ((UserDetailsImpl) principle).getId();
       refreshTokenService.deleteTokensByUserId(userId);
-      log.debug("Deleted all refresh tokens for user ID: {}", userId);
     } else {
       log.warn("Logout attempt by anonymous or unauthenticated user.");
       throw new UserNotAuthenticatedException("User is not authenticated. Please log in.");
@@ -100,6 +158,7 @@ public class AuthServiceImpl implements AuthService {
     ResponseCookie accessTokenCookie = cookieService.deleteAccessTokenCookie();
     ResponseCookie refreshTokenCookie = cookieService.deleteRefreshTokenCookie();
 
-    return new AuthResponse(new CookieTokensResponse(accessTokenCookie, refreshTokenCookie), userId);
+    return new AuthResponse(
+        new CookieTokensResponse(accessTokenCookie, refreshTokenCookie), userId);
   }
 }
